@@ -1,0 +1,2 @@
+"""These are some programs I have read and created using the book
+'Tkinter GUI programming by examples' from Packt publishing; written by 'David Love'."""
